<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_marginTop="-40dp"
        android:scaleType="fitXY"
        android:id="@+id/image_back"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/border_back_login"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/borderlogin">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/image_logo"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/todo" />

          <androidx.appcompat.widget.AppCompatEditText
              android:layout_width="match_parent"
              android:layout_height="56dp"
              android:id="@+id/mobile_edl"
              android:hint="@string/Edmobile"
              android:inputType="number"
              android:maxLines="1"
              android:maxLength="11"
              android:textColor="@color/black"
              android:textSize="15sp"
              android:background="@drawable/borderedit"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:layout_marginLeft="40dp"
              android:layout_marginRight="40dp" />
        
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:id="@+id/pass_edl"
            android:hint="@string/Edpass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:background="@drawable/borderedit"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textAlignment="textEnd"
            android:gravity="end|center_vertical" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            >

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/check_l"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="56dip"
                android:id="@+id/text_check_login"
                android:text="@string/check_login"
                android:gravity="center|center_vertical"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintRight_toLeftOf="@+id/check_l"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/borderbt"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/Btvorood"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center_vertical|center"
            android:id="@+id/Btlogin"

            />

    </LinearLayout>

</RelativeLayout>