<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:id="@+id/p_asli_close"
        android:background="?colorPrimary"
        android:elevation="6dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:id="@+id/pan_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="?selectableItemBackgroundBorderless"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:id="@+id/btn_close"
                android:layout_margin="14dp"
                android:background="@drawable/ic_back"
                tools:ignore="MissingConstraints,RtlHardcoded" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lb_Onvan"
            android:text="@string/onvan_user_add"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintRight_toLeftOf="@+id/pan_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="56dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:ignore="MissingConstraints">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scroll_add_mng"
            android:paddingBottom="80dp"
            android:clipToPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:id="@+id/btn_sel_status"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/user_sel_vaz"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/borderedit"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/onvan_ed_mng_user"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:background="@drawable/borderedit"
                    android:text="عنوان این تسک"
                    android:padding="10dp"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tozihat_ed_mng_user"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:background="@drawable/borderedit"
                    android:text="توضیحات این تسک"
                    android:padding="10dp"
                    android:layout_marginTop="15dp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="6"
                    android:id="@+id/tozihat_ed_user"
                    android:hint="@string/mng_tozih"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:scrollHorizontally="false"
                    android:background="@drawable/borderedit"
                    android:padding="10dp"
                    android:layout_marginTop="15dp"
                    android:gravity="top"
                    />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/lb_next"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="?colorPrimary"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/next_add_mng"
        android:gravity="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>